# ukraine-trip-backend

./: .dockerignore  .gitignore  Dockerfile  README.md  alembic.ini  docker-compose.yml  pyproject.toml  requirements.txt
alembic/: env.py
alembic/versions/: 00a3ec0aeeca_init_users.py  26854bc427fd_add_locations_table.py  383f8fe538a7_initial_tables.py  54e9d484c399_trips.py  611b8eff51ec_update_trip_models.py  6346f7019660_add_bookmarks_table.py  7187b0b9fdd8_create_trips_fixed.py  b356af700dfb_add_priority_to_locations.py  bfd217104b60_add_role_and_date.py  cd27d61c2cc2_add_owner_id_to_locations.py  df48f2ddd214__trip_models.py  f8a3c2b1d9e0_add_lat_lon_to_trips.py
app/: main.py
app/api/: deps.py
app/api/v1/: api.py
app/api/v1/endpoints/: auth.py  bookmarks.py  cities.py  locations.py  trips.py  users.py
app/core/: security.py
app/crud/: crud_bookmark.py  crud_location.py  crud_trip.py  crud_user.py
app/db/: base.py  session.py
app/models/: bookmark.py  city.py  location.py  trip.py  user.py
app/schemas/: bookmark.py  city.py  location.py  token.py  trip.py  user.py
app/services/: optimizer.py
src/app/: main.py
src/app/api/: dependencies.py
src/app/api/v1/: ai.py  auth.py  trips.py
src/app/core/: config.py  security.py
src/app/db/: session.py
src/app/models/: __init__.py  base.py  location.py  trip.py  user.py
src/app/schemas/: user.py
src/app/services/: ai_service.py
