[project]
name = "ukraine-trip"
version = "0.1.0"
description = "Backend for Ukraine Trip"
dependencies = [
    "fastapi",
    "uvicorn[standard]",
    "sqlalchemy",
    "psycopg2-binary",
    "psycopg2",
    "pydantic[email]",
    "pydantic-settings",
    "python-dotenv",
    "passlib[bcrypt]",
    "python-jose[cryptography]",
    "alembic",
    "python-multipart",
    "sqlalchemy[postgresql]",
    "bcrypt==4.0.1"
]

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"